# terminal_hub

./: .coverage  .gitignore  AGENT_WORKFLOW.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  TECH_STACK.md  pyproject.toml  test_prototype.py
.claude/: settings.json
.claude-plugin/: install-modules.json  marketplace.json  plugin.json
agents/: entry_point.md  workflow_auth.md  workflow_context.md  workflow_init.md  workflow_issue.md
benchmarks/: README.md  project.md
benchmarks/vanilla/: PROMPT.md
benchmarks/with-terminal-hub/: PROMPT.md
commands/builtin/: create.md  inspect.md  issues.md
docs/dev/: adding-a-plugin.md  architecture.md  commands.md  index.md  skills-system.md  testing.md
docs/user/: commands.md  configuration.md  index.md  installation.md  quick-start.md
extensions/: command_config.json  default.analyzer.json  prompt_debugger.json
extensions/builtin/: active.md  conversation.md  converse.md  help.md  init.md
extensions/gh_auxiliaries/: __init__.py  plugin.json
extensions/gh_implementation/: __init__.py  description.json  plugin.json  unload_policy.json
extensions/github_planner/: __init__.py  analyzer.py  client.py  default.analyzer.json  description.json  hub_commands.json  plugin.json  prompt_debugger.json  storage.py  (+1 more)
terminal_hub/: __main__.py  auth.py  commands.py  config.py  constants.py  display.py  env_store.py  error_msg.json  errors.py  extension_loader.py  github_client.py  hub_commands.json  install.py  labels.json  platform_runner.py  plugin_loader.py  prompts.py  server.py  slugify.py  storage.py  tui.py  workspace.py
tests/: conftest.py  test_analyzer.py  test_auth.py  test_cli_entrypoint.py  test_commands.py  test_config.py  test_connected_docs.py  test_display.py  test_env_store.py  test_errors.py  test_extension_loader.py  test_github_client.py  test_install.py  test_install_interactive.py  test_instructions_hook.py  test_milestone_assignment.py  test_milestone_knowledge.py  test_package_metadata.py  test_platform_runner.py  test_plugin_creator.py  test_plugin_customization.py  test_plugin_loader.py  test_repo_analysis.py  test_repo_confirmation.py  test_reuse_sections.py  test_scan_profile.py  test_server_internals.py  test_slugify.py  test_storage.py  test_tui.py  test_workflows.py  test_workspace.py  test_workspace_resolution.py
(+149 files in other folders)
