[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminal-hub"
version = "0.1.0"
description = "Terminal-based GitHub management and automation for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "anthropic>=0.25.0",
]

[project.scripts]
terminal-hub = "terminal_hub.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["terminal_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
