[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminal-hub"
version = "0.1.0"
description = "GitHub issue tracking and project context management for Claude Code via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "github", "claude-code", "project-management", "issues"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/JuneKim0007/terminal_hub"
Repository = "https://github.com/JuneKim0007/terminal_hub"
Issues = "https://github.com/JuneKim0007/terminal_hub/issues"

[project.scripts]
terminal-hub = "terminal_hub.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["terminal_hub", "extensions"]
artifacts = [
    "commands/builtin/*.md",
    ".claude-plugin/*.json",
    ".claude/settings.json",
    "extensions/github_planner/hub_commands.json",
    "extensions/github_planner/labels.json",
    "extensions/github_planner/commands/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=terminal_hub --cov=extensions --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["terminal_hub", "extensions"]
omit = ["terminal_hub/__main__.py"]

[tool.coverage.report]
show_missing = true
